pitstop-k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pitstop-webapp
  namespace: pitstop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pitstop-webapp
  template:
    metadata:
      labels:
        app: pitstop-webapp
    spec:
      containers:
      - name: pitstop-webapp
        image: abdoanss/pitstop-webapp
        ports:
        - containerPort: 80
        readinessProbe:   
          httpGet:
            path: /
            port: 80     
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:   
          httpGet:
            path: /
            port: 80        
          initialDelaySeconds: 30
          periodSeconds: 10
        startupProbe:     
          httpGet:
            path: /
            port: 80        
          failureThreshold: 30
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: pitstop-webapp
  namespace: pitstop
spec:
  selector:
    app: pitstop-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP    # Removed nodePort since we're using ClusterIP
