pitstop-k8s/gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: pitstop-express-gateway
  namespace: pitstop
spec:
  selector:
    app: pitstop-express-gateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: pitstop-express-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pitstop-express-gateway
  namespace: pitstop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pitstop-express-gateway
  template:
    metadata:
      labels:
        app: pitstop-express-gateway
    spec:
      containers:
      - name: pitstop-express-gateway
        image: abdoanss/pitstop-express-gateway
        ports:
        - containerPort: 8080
