pitstop-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pitstop-ingress
  namespace: pitstop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: pitstop.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: pitstop-webapp
            port:
              number: 80
